--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/chrome": "^0.0.248",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "valtio": "^1.11.2"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0-beta.19",
